[package]
name = "client"
authors = ["Lowie Deferme <lowie.deferme@uhasselt.be>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
regex = "1.5.4"
socket2 = "0.4.2"