[package]
name = "traffic-generator-client"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
keywords = ["network-traffic-generation", "udp", "quic"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.4.2"
chrono = "0.4.19"
